add authentication flow: detect logged in user

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-query-devtools": "^5.32.0",
     "graphql": "^16.8.1",
     "graphql-codegen": "^0.4.0",
     "graphql-request": "^6.1.0",
@@ -18,6 +20,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-query": "^3.39.3",
+    "react-query-devtools": "^2.6.3",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
