--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
+    "axios": "^1.6.8",
     "graphql": "^16.8.1",
     "graphql-codegen": "^0.4.0",
     "graphql-request": "^6.1.0",
