--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.0",
     "react-query": "^3.39.3",
     "react-query-devtools": "^2.6.3",
     "tailwind-scrollbar": "^3.1.0"
